HADOOP-1387.  A number of minor 'performance' code cleanups suggested by findbugs.  Contributed by Arun.
git-svn-id: https://svn.apache.org/repos/asf/lucene/hadoop/trunk@540336 13f79535-47bb-0310-9956-ffa450edef68